# truepkmn

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs  tests.rs
src/bash/: test-pokemon-basic.sh  test-pokemon-translated.sh
src/errors/: errors.rs
src/models/: pokemon.rs
