[package]
name = "truepkmn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.5.1"}
serde = {version = "1.0.197", features= ["derive"]}
serde_json = "1.0.114"
reqwest = { version = "0.12.4", features = ["json" , "rustls-tls", "blocking"] }
tokio = "1.37.0"
derive_more = "0.99.17"
log = "0.4.21"

